--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TanStack Router</title>
+  <title>Sabana club</title>
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <link href="src/styles.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="/assets/logo.png" />
 </head>
 
 <body>
